# openglfun

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: linmath.h
include/glad/: gl.h
src/: engine.cpp  main.cpp
